--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
         <!-- Intro Table -->
         <table cellspacing="30" align="center">
             <tr>
-                <td rowspan="3"><img src="kavish_photo.jpg" alt="Kavish's Photo" height="200" width="149"></td>
+                <td rowspan="3"><img src="kavish_photo.JPG" alt="Kavish's Photo" height="200" width="149"></td>
                 <td>
                     <h1>Kavish Shah</h1>
                 </td>
