--- a/contact_me.html
+++ b/contact_me.html
@@ -3,53 +3,58 @@
     <head>
         <meta charset="UTF-8">
         <title>Kavish Shah Contact Details</title>
+        <link rel="stylesheet" href="css/styles.css">
+
     </head>
     <body>
-
-        <hr>
-        <table cellspacing="10" align="center">
-            <thead align="center">
-                <th align="center">
-                    <h3>Contact Me</h3>
-                </th>
+        <table class="table_center text_align">
+            <thead>
+                <tr>
+                    <th><h1>Contact Me</h1></th>
+                </tr>
             </thead>
             <tbody>
                 <tr>
-                    <td align="center">
+                    <td>
                         <a href="mailto:kksmisha@gmail.com" target="_blank">Email</a>
                     </td>
                 </tr>
                 <tr>
-                    <td align="center">
+                    <td>
                         <a href="https://www.instagram.com/_kavish.s/" target="_blank">Instagram</a>
                     </td>
                 </tr>
                 <tr>
-                    <td align="center">
+                    <td>
                         <a href="https://twitter.com/_kavish_s/" target="_blank">Twitter</a>
                     </td>
                 </tr>
                 <tr>
-                    <td align="center">
+                    <td>
                         <a href="https://www.linkedin.com/in/kavish-shah-91b98b1a8/" target="_blank">LinkedIn</a>
                     </td>
                 </tr>
             </tbody>
         </table>
-        <hr>
 
-        <form action="mailto:kksmisha@gmail.com" method="post" enctype="text/plain" align="center">
-            <label>Your Name:</label>
-            <input type="text" placeholder="eg. Elon Musk" name="yourName">
-            <br>
-            <label>Your Email:</label>
-            <input type="email" placeholder="eg. random@gmail.com" name="yourEmail">
-            <br>
-            <label>I agree that my name and email will only be used to sign up to the mailing list and receive updates</label>
-            <input type="checkbox">
-            <br>
-            <input type="submit">
-        </form>
+<!--        <form action="mailto:kksmisha@gmail.com" method="post" enctype="text/plain">-->
+<!--            <label>Your Name:</label>-->
+<!--            <label>-->
+<!--                <input type="text" placeholder="eg. Elon Musk" name="yourName">-->
+<!--            </label>-->
+<!--            <br>-->
+<!--            <label>Your Email:</label>-->
+<!--            <label>-->
+<!--                <input type="email" placeholder="eg. random@gmail.com" name="yourEmail">-->
+<!--            </label>-->
+<!--            <br>-->
+<!--            <label>I agree that my name and email will only be used to sign up to the mailing list and receive updates</label>-->
+<!--            <label>-->
+<!--                <input type="checkbox">-->
+<!--            </label>-->
+<!--            <br>-->
+<!--            <input type="submit">-->
+<!--        </form>-->
 
     </body>
 </html>
