--- a/contact_me.html
+++ b/contact_me.html
@@ -10,7 +10,7 @@
         <table class="table_center text_align">
             <thead>
                 <tr>
-                    <th><h1>Contact Me</h1></th>
+                    <th><h1><span class="multicolrtext">Contact Me</span></h1></th>
                 </tr>
             </thead>
             <tbody>
