--- a/skills.html
+++ b/skills.html
@@ -11,7 +11,7 @@
 <table class="table_center">
     <thead>
     <tr>
-        <th colspan="2"><h1>Skills</h1></th>
+        <th colspan="2"><h1><span class="multicolrtext">Skills</span></h1></th>
     </tr>
     </thead>
     <tbody>
