--- a/index.html
+++ b/index.html
@@ -19,11 +19,11 @@
     <tr>
         <td rowspan="2"><img class="photo_resize1" alt="Kavish's Photo" src="kavish_photo_nobg.png"></td>
         <td>
-            <h1>Kavish Shah</h1>
+            <h1 class="text_align_left"><span class="multicolrtext">Kavish Shah</span></h1>
         </td>
     </tr>
     <tr>
-        <td><em>Student at PACE Junior Science College</em></td>
+        <td><h3 class="text_align_left"><em>Student at PACE Junior Science College</em></h3></td>
     </tr>
     <tr>
         <td colspan="2">
@@ -41,7 +41,7 @@
 <table class="table_center text_align">
     <thead>
     <tr>
-        <th colspan="2"><h2>Education</h2></th>
+        <th colspan="2"><h1><span class="multicolrtext">Education</span></h2></th>
     </tr>
     </thead>
     <tbody>
@@ -65,7 +65,7 @@
 <table class="table_center text_align">
     <thead>
     <tr>
-        <th colspan="2"><h2>Languages</h2></th>
+        <th colspan="2"><h1><span class="multicolrtext">Languages</span></h2></th>
     </tr>
     </thead>
     <tbody>
@@ -89,7 +89,7 @@
 <table class="table_center text_align">
     <thead>
     <tr>
-        <th colspan="2"><h2>Additional Links</h2></th>
+        <th colspan="2"><h1><span class="multicolrtext">Additional Links</span></h2></th>
     </tr>
     </thead>
     <tbody>
